# authentik-mcp

./: README.md  SPEC.md  pyproject.toml
.github/workflows/: build.yml
docs/: index.html
src/authentik_mcp/: __main__.py  client.py  config.py  server.py
src/authentik_mcp/tools/: __init__.py  admin.py  delete.py  flows_read_events.py  flows_read_flows.py  flows_read_policies.py  flows_read_sources.py  flows_read_stages.py  flows_write_events.py  flows_write_flows.py  flows_write_policies.py  flows_write_sources.py  flows_write_stages.py  groups.py  helpers.py  read_authenticators.py  read_core.py  read_crypto.py  read_endpoints.py  read_enterprise.py  read_managed.py  read_oauth2_tokens.py  read_outposts.py  read_property_mappings.py  read_providers.py  read_rac.py  read_rbac.py  read_reports.py  read_root.py  read_ssf.py  read_tasks.py  read_tenants.py  version.py  write_authenticators.py  write_core.py  write_crypto.py  write_endpoints.py  write_enterprise.py  write_managed.py  write_outposts.py  (+6 more)
tests/: test_config.py  test_tools.py
