[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authentik-mcp"
version = "1.0.0"
description = "MCP server for Authentik identity provider"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0",
]
keywords = ["mcp", "authentik", "identity", "sso", "model-context-protocol", "claude", "ai"]

[project.scripts]
authentik-mcp = "authentik_mcp:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
